--- a/app/src/main/res/layout/activity_buygame.xml
+++ b/app/src/main/res/layout/activity_buygame.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".buygame">
+    tools:context=".buygameActivity">
 
     <Button
         android:id="@+id/csgo_menu2"
@@ -89,7 +89,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/csgo_payment2"
+        android:id="@+id/buygame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="100dp"
