--- a/app/src/main/res/layout/activity_addgame.xml
+++ b/app/src/main/res/layout/activity_addgame.xml
@@ -26,7 +26,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="-250dp"
