--- a/app/src/main/res/layout/activity_debit_card.xml
+++ b/app/src/main/res/layout/activity_debit_card.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".debit_cardActivity">
 
+    <TextView
+        android:id="@+id/total4"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="125dp"
+        android:layout_marginEnd="120dp"
+        android:textSize="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/debit_success"
         android:layout_width="wrap_content"
@@ -46,17 +56,6 @@
         android:text="total :"
         android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView34"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="125dp"
-        android:layout_marginEnd="140dp"
-        android:text="100"
-        android:textSize="25dp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
