--- a/app/src/main/res/layout/activity_fpx.xml
+++ b/app/src/main/res/layout/activity_fpx.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".fpxActivity">
 
+    <TextView
+        android:id="@+id/total2"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="280dp"
+        android:layout_marginEnd="116dp"
+        android:textSize="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/fpx_success"
         android:layout_width="wrap_content"
@@ -25,17 +35,6 @@
         android:text="total :"
         android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView25"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="140dp"
-        android:text="100"
-        android:textSize="25dp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
