--- a/app/src/main/res/layout/activity_tng.xml
+++ b/app/src/main/res/layout/activity_tng.xml
@@ -6,6 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".tngActivity">
 
+    <TextView
+        android:id="@+id/textView19"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="200dp"
+        android:text="total :"
+        android:textSize="25dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/total3"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="100dp"
+        android:textSize="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/tng_payment"
         android:layout_width="wrap_content"
@@ -30,7 +51,7 @@
         android:id="@+id/textView52"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="290dp"
         android:text="scan here for payment"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
