--- a/app/src/main/res/layout/activity_playgamelist.xml
+++ b/app/src/main/res/layout/activity_playgamelist.xml
@@ -38,7 +38,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/playgamelist"
         android:layout_width="390dp"
         android:layout_height="520dp"
         android:layout_marginStart="1dp"
