--- a/app/src/main/res/layout/activity_delete_genre.xml
+++ b/app/src/main/res/layout/activity_delete_genre.xml
@@ -7,7 +7,7 @@
     tools:context=".delete_genre_Activity">
 
     <TextView
-        android:id="@+id/textViewGameName"
+        android:id="@+id/messageTextView"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
