--- a/app/src/main/res/layout/list_item_genre_layout.xml
+++ b/app/src/main/res/layout/list_item_genre_layout.xml
@@ -7,7 +7,7 @@
     android:background="?android:attr/selectableItemBackground">
 
     <TextView
-        android:id="@+id/textViewGameName"
+        android:id="@+id/messageTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Genre Name" />
